Initial commit – Echoes Unwritten

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,34 +1,56 @@
 {
   "compilerOptions": {
+    /* Base */
+    "baseUrl": ".",
+    /* Language */
     "target": "ES2017",
-    "lib": ["dom", "dom.iterable", "esnext"],
-    "allowJs": true,
-    "skipLibCheck": true,
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
+    "jsx": "react-jsx",
+    /* Type Safety */
     "strict": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    /* Build */
     "noEmit": true,
-    "esModuleInterop": true,
+    "incremental": true,
+    "isolatedModules": true,
+    /* Module Resolution */
     "module": "esnext",
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
-    "isolatedModules": true,
-    "jsx": "react-jsx",
-    "incremental": true,
+    "esModuleInterop": true,
+    "allowJs": true,
+    /* Path Aliases (THIS FIXES YOUR ISSUES) */
+    "paths": {
+      "@database/*": [
+        "database/*"
+      ],
+      "@backend/*": [
+        "backend/*"
+      ],
+      "@/*": [
+        "./*"
+      ]
+    },
+    /* Next.js */
     "plugins": [
       {
         "name": "next"
       }
-    ],
-    "paths": {
-      "@/*": ["./*"]
-    }
+    ]
   },
   "include": [
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    ".next/dev/types/**/*.ts",
-    "**/*.mts"
+    ".next/dev/types/**/*.ts"
   ],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules"
+  ]
 }
